frstack/opendj.yaml
# We use a single OpenDJ instance as the config and CTS store for the cluster
# This instance is ephemeral - just for demo purposes
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: opendj
  name: opendj
  namespace: forgerock
spec:
  replicas: 1
  template:
    metadata:
      labels:
         name: opendj
    spec:
      containers:
      - name: opendj
        image: forgerock/opendj:nightly
        imagePullPolicy: Always
        ports:
        - name: ldap
          containerPort: 389
          protocol: TCP
        volumeMounts:
          - name: secrets
            mountPath: /var/secrets/opendj
            readOnly: true
          - name: opendj-disk
            mountPath: /opt/opendj/data
      volumes:
        - name: secrets
          secret:
            secretName: fr-secrets
        - name: opendj-disk
          persistentVolumeClaim:
            claimName: opendj-storage
