frstack/opendj-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opendj
  namespace: forgerock
spec:
  ports:
    - port: 389
      targetPort: ldap
      protocol: "TCP"
      name: opendj-389
  selector:
    name: opendj
