frstack/openig.yaml
# Run OpenIDM on k8
# Service definition
apiVersion: v1
kind: Service
metadata:
  name: openig
  namespace: forgerock
spec:
  selector:
    name: openig
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30102

---
# Uses git-sync side car instead of gitRepo volume
# gitRepo does not yet work on coreOS
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: openig
  namespace: forgerock
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: openig
    spec:
      containers:
      # sidecar to fetch our config from git
      - name: git-sync
        image: gcr.io/google_containers/git-sync
        volumeMounts:
        - name: conf
          mountPath: /git
      - name: openig
        image: forgerock/openig:nightly
        ports:
          - containerPort: 8080
        #imagePullPolicy: Always
        volumeMounts:
          - name: conf
            mountPath: /git
      volumes:
        - name: conf
          emptyDir: {}
